MCA App/Release/MCA Dev Org/src/objects/Split_Batch__c.object
<CustomObject>
    <fields>
        <fullName>Date_Time__c</fullName>
        <label>Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>From Address Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Messages__c</fullName>
        <label>Error Messages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Import_Type__c</fullName>
        <label>Import Type</label>
        <picklist>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Processor_Integration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Processor Integration</label>
        <referenceTo>Processor_Integration__c</referenceTo>
        <relationshipName>Batch_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rows_Imported__c</fullName>
        <label>Rows Imported</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(ISBLANK(Error_Messages__c), 
	IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Success&quot;), 
	IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Fail&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_Messages__c</fullName>
        <label>Success Messages</label>
        <type>TextArea</type>
    </fields>
    <label>Split Batch</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date_Time__c</columns>
        <columns>Status__c</columns>
        <columns>Processor_Integration__c</columns>
        <columns>Rows_Imported__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SBN-{00000}</displayFormat>
        <label>Split Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Split Batchs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>